# ome_zarr_transformations_conformance

./: .editorconfig  .gitignore  README.md  prek.toml  pyproject.toml  transformation_conformance.py  write_cases.py
.github/workflows/: ci.yaml
cases/affine_identity.ome.zarr/: conformance.toml  zarr.json
cases/affine_identity_inverse.ome.zarr/: conformance.toml
cases/affine_inverse.ome.zarr/: zarr.json
cases/bijection_forward.ome.zarr/: conformance.toml  zarr.json
cases/bijection_inverse.ome.zarr/: conformance.toml
cases/byDimension.ome.zarr/: conformance.toml  zarr.json
cases/byDimension_inverse.ome.zarr/: conformance.toml
cases/identity.ome.zarr/: conformance.toml
cases/identity_inverse.ome.zarr/: conformance.toml  zarr.json
cases/mapAxis.ome.zarr/: conformance.toml  zarr.json
cases/mapAxis_inverse.ome.zarr/: conformance.toml
cases/rotation.ome.zarr/: conformance.toml  zarr.json
cases/rotation_identity.ome.zarr/: conformance.toml  zarr.json
cases/rotation_identity_inverse.ome.zarr/: conformance.toml
cases/rotation_inverse.ome.zarr/: conformance.toml  zarr.json
cases/scale.ome.zarr/: conformance.toml  zarr.json
cases/scale_inverse.ome.zarr/: conformance.toml  zarr.json
cases/sequence.ome.zarr/: conformance.toml  (+1 more)
cases_config/: affine.toml  bijection_forward.toml  bijection_inverse.toml  byDimension.toml  identity.toml  mapAxis.toml  rotation.toml  rotation_identity.toml  scale.toml  sequence.toml  simple_path.toml  translation.toml  unknown_source.toml  unknown_target.toml
dev_scripts/: make_coords.py  null_dingus.py  write_cases.py
(+13 files in other folders)
