[project]
name = "ome-zarr-transformations-conformance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.urls]
source = "https://github.com/clbarnes/ome_zarr_transformations_conformance"
issues = "https://github.com/clbarnes/ome_zarr_transformations_conformance/issues"

[project.scripts]
oztc = "transformation_conformance:main"

[dependency-groups]
dev = [
    "tomli_w",
    "tomli>=2.4",
    "ruff>=0.15.10",
    "mypy>=1.20.1",
    "prek>=0.3.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
only-include = ["transformation_conformance.py", "cases/"]
